<resources>
    <string name="app_name">LoseIt</string>
    <string name="goal">Goal</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="remaining">Remaining</string>
    <string name="diary_add">Add</string>
    <string name="diary_meal_breakfast">Breakfast</string>
    <string name="diary_meal_lunch">Lunch</string>
    <string name="diary_meal_dinner">Dinner</string>
    <string name="diary_meal_snacks">Snack</string>
    <string name="diary_add_meal">Add Meal</string>
    <string name="diary_exercise">Exercise</string>
    <string name="diary_add_exercise">Add Exercise</string>
    <string name="diary_create_exercise">Create Exercise</string>
    <string name="diary_add_exercise_title">Exercise Description</string>
    <string name="add_exercise_title_example">Required (e.g. running, swimming)</string>
    <string name="diary_food_unit_name">Serving Size</string>
    <string name="add_exercise_unit_name_example">Required (e.g. hour, minute)</string>
    <string name="diary_exercise_length">Length</string>
    <string name="add_exercise_length_example">Required</string>
    <string name="diary_content_calorie_per_unit">Calories Burned Per Unit</string>
    <string name="add_food_calorie_per_unit_example">Required</string>
    <string name="add_done">Done</string>
    <string name="general_alert">Alert</string>
    <string name="required_item_empty_error">Required items cannot be empty!</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_result_error">No Results Found</string>
    <string name="internet_connection_error">Internet connection error. Please try again.</string>
    <string name="diary_edit_exercise">Edit Exercise</string>
    <string name="delete_item_alert">Are you sure to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="add_food_title_example">e.g. Big Mac, bananas</string>
    <string name="diary_create_food">Create Meal</string>
    <string name="diary_content_title">Nutrient Description</string>
    <string name="add_food_unit_name_example">Required (e.g. piece, pound)</string>
    <string name="add_food_title_example_required">Required (e.g. Grey Goose, banana)</string>
    <string name="add_food_amount_example">Required</string>
    <string name="add_food_calory_per_unit_example">Required</string>
    <string name="diary_content_amount">Number of Servings</string>
    <string name="diary_content_calory_per_unit">Calories Per Serving</string>
    <string name="diary_exercise_unit_name">Unit</string>
    <string name="copyright_nutrix">Powered by</string>
    <string name="diary_content_unit_name">Time Unit</string>
    <string name="diary_edit_food">Edit Meal</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="set_goal_hint">Set your daily calorie goal:</string>
    <string name="dialog_positive_button_ok">OK</string>
    <string name="item_required">Required</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
</resources>
