<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_meal"
        style="@style/MyToolbar">
        <TextView
            android:text="@string/diary_create_food"
            style="@style/MyToolbarTextLight"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/diary_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_title"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLength="15"
        android:hint="@string/add_food_title_example_required" />
    <TextView
        android:id="@+id/diary_content_unit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_food_unit_name"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_unit_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:maxLength="10"
        android:hint="@string/add_food_unit_name_example"
        android:inputType=""/>
    <TextView
        android:id="@+id/diary_content_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_amount"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:maxLength="5"
        android:hint="@string/add_food_amount_example"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/diary_content_calory_per_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_calory_per_unit"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_calory_per_unit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:maxLength="5"
        android:hint="@string/add_food_calory_per_unit_example"
        android:inputType="numberDecimal"/>


</LinearLayout>
