<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_exercise"
        style="@style/MyToolbar">
        <TextView
            android:text="@string/diary_edit_exercise"
            style="@style/MyToolbarTextLight"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/diary_exercise_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_add_exercise_title"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_edit_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLength="15"
        android:hint="@string/add_exercise_title_example" />
    <TextView
        android:id="@+id/diary_exercise_unit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_unit_name"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_edit_unit_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:maxLength="10"
        android:hint="@string/add_exercise_unit_name_example" />
    <TextView
        android:id="@+id/diary_exercise_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_exercise_length"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_edit_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:maxLength="5"
        android:hint="@string/add_exercise_length_example"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/diary_exercise_calory_per_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_calorie_per_unit"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>

    <EditText
        android:id="@+id/diary_content_edit_calory_per_unit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_food_calorie_per_unit_example"
        android:maxLines="1"
        android:maxLength="5"
        android:paddingLeft="@dimen/large_padding"
        android:inputType="numberDecimal"/>
</LinearLayout>
