<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        style="@style/MyToolbar">
        <TextView
            android:id="@+id/main_toolbar_title"
            android:text="@string/app_name"
            android:drawableRight="@drawable/ic_date_range_black_24dp"
            style="@style/MyToolbarTextLight"/>
    </android.support.v7.widget.Toolbar>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_main"
        android:background="@color/colorWhite"
        android:stretchColumns="*"
        android:padding="@dimen/small_padding">
        <TableRow>
            <TextView
                android:id="@+id/goal_number"
                tools:text="2000"
                android:gravity="center" />
            <TextView
                android:text="-"
                android:gravity="center"/>
            <TextView
                android:id="@+id/food_number"
                tools:text="800"
                android:gravity="center"/>
            <TextView
                android:text="+"
                android:gravity="center"/>
            <TextView
                android:id="@+id/exercise_number"
                tools:text="500"
                android:gravity="center"/>
            <TextView
                android:text="="
                android:gravity="center"/>
            <TextView
                android:id="@+id/remaining_number"
                tools:text="1700"
                android:textColor="@color/colorGreen"
                android:gravity="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/goal"
                android:gravity="center"/>
            <TextView
                tools:text=""
                android:gravity="center"/>
            <TextView
                android:text="@string/food"
                android:gravity="center"/>
            <TextView
                tools:text=""
                android:gravity="center"/>
            <TextView
                android:text="@string/exercise"
                android:gravity="center"/>
            <TextView
                tools:text=""
                android:gravity="center"/>
            <TextView
                android:text="@string/remaining"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/main_hr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hr_width"
        android:background="@color/colorBorderLine"
        android:layout_below="@id/table"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_hr"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/diary_breakfast_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_breakfast_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/diary_lunch_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_lunch_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/diary_dinner_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_dinner_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/diary_snack_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_snack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_snack_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/diary_exercise_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_exercise_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>